force-app/main/default/objects/Delivery__c/fields/Actual_Delivery_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date_and_Time__c</fullName>
    <label>Actual Delivery Date and Time</label>
    <type>DateTime</type>
</CustomField>