force-app/main/default/objects/Delivery__c/fields/Delivered_To_Person__c.field-meta.xml
<CustomField>
    <fullName>Delivered_To_Person__c</fullName>
    <label>Delivered To Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>