force-app/main/default/objects/Delivery__c/fields/Delivery_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Assigned_To__c</fullName>
    <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Assigned To</label>
    <type>Text</type>
</CustomField>