force-app/main/default/objects/Delivery__c/fields/Delivery_Assigned_To_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Assigned_To_User_ID__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery_Assigned_To_User_ID</label>
    <type>Text</type>
</CustomField>