force-app/main/default/objects/Delivery__c/fields/Delivery_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Cancellation_Reason__c</fullName>
    <label>Delivery Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Serviceable Location</fullName>
            </value>
            <value>
                <fullName>Credit Issues</fullName>
            </value>
            <value>
                <fullName>Customer refused Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>