force-app/main/default/objects/Delivery__c/fields/Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instruction__c</fullName>
    <formula>TEXT(Shipment__r.Delivery_Instruction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Instruction</label>
    <type>Text</type>
</CustomField>