force-app/main/default/objects/Delivery__c/fields/Destination_Hub__c.field-meta.xml
<CustomField>
    <fullName>Destination_Hub__c</fullName>
    <formula>Address__r.Active_Pincode__r.Hub__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Hub</label>
    <type>Text</type>
</CustomField>