force-app/main/default/objects/Delivery__c/fields/Number_of_Secure_Bag__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Secure_Bag__c</fullName>
    <formula>Shipment__r.Number_of_Secure_Bags__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Secure Bag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>