force-app/main/default/objects/Delivery__c/fields/Offline_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Offline_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline Delivery</label>
    <type>Checkbox</type>
</CustomField>