force-app/main/default/objects/Delivery__c/fields/Origin_Hub__c.field-meta.xml
<CustomField>
    <fullName>Origin_Hub__c</fullName>
    <formula>Shipment__r.Origin_Address_Name__r.Active_Pincode__r.Hub__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Hub</label>
    <type>Text</type>
</CustomField>