force-app/main/default/objects/Delivery__c/fields/Route_Number__c.field-meta.xml
<CustomField>
    <fullName>Route_Number__c</fullName>
    <formula>Address__r.Delivery_Route_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Number</label>
    <type>Text</type>
</CustomField>