force-app/main/default/objects/Delivery__c/fields/Shipping_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Note_Number__c</fullName>
    <formula>Shipment__r.Shipping_Note_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Note Number</label>
    <type>Text</type>
</CustomField>