force-app/main/default/objects/Delivery__c/validationRules/preventStatusChangeAfterDelivered.validationRule-meta.xml
<ValidationRule>
    <fullName>preventStatusChangeAfterDelivered</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Delivered&quot;)
)</errorConditionFormula>
    <errorMessage>Status cannot change once delivered mark</errorMessage>
</ValidationRule>