force-app/main/default/objects/Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Actual_Delivery_Date_and_Time__c</columns>
    <columns>NAME</columns>
    <columns>Shipment__c</columns>
    <columns>Destination_Hub__c</columns>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Number_of_Secure_Bag__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Address__c</columns>
    <columns>Delivery_Instruction__c</columns>
    <columns>Route_Number__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>POD_Link_Url__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>