force-app/main/default/objects/Delivery__c/listViews/Deliveries_Delivered.listView-meta.xml
<ListView>
    <fullName>Deliveries_Delivered</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Shipment__c</columns>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Number_of_Secure_Bag__c</columns>
    <columns>Address__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Delivery_Date_and_Time__c</columns>
    <columns>Delivery_Instruction__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>Deliveries - Delivered</label>
</ListView>